tests/ui/const-generics/params-in-ct-in-ty-param-lazy-norm.full.stderr
error: generic parameters with a default must be trailing
  --> $DIR/params-in-ct-in-ty-param-lazy-norm.rs:8:12
   |
LL | struct Bar<T = [u8; N], const N: usize>(T);
   |            ^

error[E0128]: generic parameter defaults cannot reference parameters before they are declared
  --> $DIR/params-in-ct-in-ty-param-lazy-norm.rs:8:21
   |
LL | struct Bar<T = [u8; N], const N: usize>(T);
   |                     ^ cannot reference `N` before it is declared

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0128`.
